--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,15 @@
         "php": "^8.1",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.0",
+        "laravel/framework": "^9.5",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
-        "laravelcollective/html" : "^6.3"
+        "laravel/ui": "^3.4",
+        "laravelcollective/html": "^6.3",
+        "twbs/bootstrap": "5.1.3"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.12",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
@@ -39,6 +42,9 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:meta",
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
         "post-root-package-install": [
