--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.1",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel-lang/lang": "^11.0",
         "laravel/framework": "^9.5",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
